--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "validator": "^13.6.0",
     "vue": "^2.6.11",
